--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -36,6 +36,10 @@
                 </menu>
             </item>
             <item
+                android:id="@+id/level1"
+                android:title="Level 1">
+            </item>
+            <item
                 android:id="@+id/other"
                 android:title="Others">
             </item>
